--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Holiday Sign-up</title>
   <link rel="stylesheet" href="styles/image-section.css">
+  <link rel="stylesheet" href="styles/form-section.css">
   <script type="text/javascript" src="scripts/script.js"></script>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/gidole-regular" type="text/css"/>
 </head>
 <body>
   <div class="main-wrapper">
@@ -23,15 +25,48 @@
 
     <div class="signup-wrapper">
       <div class="form-header">
-
+        <p>As the holiday season arrives, we want to supply your family with the<br>
+          highest quality Christmas trees, delivered right to your doorstep!<br>
+          Sign up <em>now</em> to get started!
+        </p>
       </div>
 
       <div class="form-section">
+        <form action="test" id="signup-form">
+          <div class="left-row">
+            <div class="first-name">
+              <label for="firstName">FIRST NAME</label>
+              <input type="text" id="firstName" required>
+            </div>
+            <div class="user-email">
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" placeholder="email@mail.com" required>
+            </div>
+            <div class="user-password">
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" minlength="5" maxlength="15" required>
+            </div>
+          </div>
 
+          <div class="right-row">
+            <div class="last-name">
+              <label for="lastName">LAST NAME</label>
+              <input type="text" id="lastName" required>
+            </div>
+            <div class="phone-number">
+              <label for="number">PHONE</label>
+              <input type="number" id="number" placeholder="123456789" minlength="8" maxlength="9" required>
+            </div>
+            <div class="confirm-password">
+              <label for="password">CONFIRM PASSWORD</label>
+              <input type="password" id="confirmPassword" minlength="5" maxlength="15" required>
+            </div>
+          </div>
+        </form>
       </div>
 
       <div class="form-footer">
-
+        <button type="submit" form="signup-form">Create Account</button>
       </div>
 
     </div>
