Finishing design touches

--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
           </div>
         </form>
       </div>
-
       <div class="form-footer">
         <button type="submit" form="signup-form">Create Account</button>
+        <div class="sign-in-para">
+          <p><b>Already have an account?</b> <a href="https://giphy.com/gifs/css-13FrpeVH09Zrb2">Log in!</a></p>
+        </div>
       </div>
-
     </div>
   </div>
 </body>
